# ore_shadan_reader

./: LICENSE  README.md  main.py  pyproject.toml
