[tool.poetry]
name = "ore-shadan-reader"
version = "0.1.0"
description = ""
authors = ["notch_man <miyake.kentaro0815@mokkuriko.com>"]
license = "MIT License"
readme = "README.md"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 128

[tool.isort]
import_heading_firstparty = "First Party Library"
import_heading_localfolder = "Local Library"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party Library"
include_trailing_comma = true
line_length = 128
multi_line_output = 3
profile = "black"

[tool.flake8]
exclude = [".venv", ".git", "__pycache__"]
extend-ignore = ["E203", "W503"]
max-complexity = 10
max-line-length = 128

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.1.1"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-isort = "^6.0.0"
flake8-pytest-style = "^1.7.2"
flake8-unused-arguments = "^0.0.13"
isort = "^5.12.0"
mypy = "^1.0.1"
pep8-naming = "^0.13.3"
pyproject-flake8 = "^6.0.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
